--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.profiles.active=dev
-spring.datasource.url=jdbc:postgresql://${PG_HOST}:${PG_PORT}/${POSTGRES_DB}
-spring.datasource.username=${PGUSER}
-spring.datasource.password=${PGPASSWORD}
+spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
+spring.datasource.username=postgres
+spring.datasource.password=mypassword
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 logging.level.org.springframework.security.web=DEBUG
 
-jwt.secret=${JWTSECRET}
+jwt.secret=myjwtsecret
