--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -6,34 +6,15 @@ jobs:
   postgres_and_springboot:
     runs-on: ubuntu-latest
 
-    services:
-      postgres:
-        image: postgres:latest
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd="pg_isready -U postgres"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=5
-        env:
-          POSTGRES_DB: postgres
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: mypassword
-
     steps:
     - name: Check out the repository
       uses: actions/checkout@v2
 
-    - name: Wait for PostgreSQL to be healthy
-      run: |
-        until docker ps --filter "health=healthy" | grep postgres; do
-          echo "Waiting for postgres to be healthy...";
-          sleep 5;
-        done
+    - name: Start PostgreSQL container
+      run: docker run --name postgres -e POSTGRES_DB=postgres -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=mypassword -p 5432:5432 -d postgres
 
     - name: Run Spring Boot backend container
-      run: docker run --name my-springboot-app --link postgres:db -e SPRING_PROFILES_ACTIVE=dev -e SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/postgres -e SPRING_DATASOURCE_USERNAME=postgres -e SPRING_DATASOURCE_PASSWORD=mypassword -p 8080:8080 jeffreyamc/lab_e2e_20241_05_springboot:v2
+      run: docker run --name my-springboot-app --link postgres:db -e SPRING_PROFILES_ACTIVE=dev -e SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5432/postgres -e SPRING_DATASOURCE_USERNAME=postgres -e SPRING_DATASOURCE_PASSWORD=mypassword -p 8080:8080 jeffreyamc/lab_e2e_20241_05_springboot:v2
 
     - name: Run test_register.sh
       run: |
