--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -14,12 +14,11 @@ jobs:
       run: docker run --name postgres -e POSTGRES_DB=postgres -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=mypassword -p 5432:5432 -d postgres
 
     - name: Run Spring Boot backend container
-      run: docker run -d --name my-springboot-app --link postgres:db -e SPRING_PROFILES_ACTIVE=dev -e SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/postgres -e SPRING_DATASOURCE_USERNAME=postgres -e SPRING_DATASOURCE_PASSWORD=mypassword -p 8080:8080 jeffreyamc/lab_e2e_20241_05_springboot:v3
+      run: docker run -d --name my-springboot-app --link postgres:db -e SPRING_PROFILES_ACTIVE=dev -e SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/postgres -e SPRING_DATASOURCE_USERNAME=postgres -e SPRING_DATASOURCE_PASSWORD=mypassword -p 8080:8080 jeffreyamc/lab_e2e_20241_05_springboot:v4
     
     - name: Check Docker containers
       run: docker ps
 
-    - name: Run test_register.sh
+    - name: Test backend connection to PostgreSQL
       run: |
-        chmod +x test_register.sh
-        ./test_register.sh
+        curl -X GET http://localhost:8080/test/connection
