--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.profiles.active=dev
-server.port=8081
-spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
+#server.port=8081
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=mypassword
 spring.jpa.hibernate.ddl-auto=update
