--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -21,4 +21,4 @@ jobs:
 
     - name: Test backend connection to PostgreSQL
       run: |
-        curl -X GET http://localhost:8080/test/connection
+        curl -X GET http://localhost:8080/auth/test/connection
