--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -1,9 +1,9 @@
-name: Run PostgreSQL and Spring Boot in GitHub Actions
+name: lab_e2e_20241_05 workflow
 
 on: [push, pull_request]
 
 jobs:
-  postgres_and_springboot:
+  build_and_test:
     runs-on: ubuntu-latest
 
     steps:
@@ -13,13 +13,37 @@ jobs:
     - name: Start PostgreSQL container
       run: docker run --name postgres -e POSTGRES_DB=postgres -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=mypassword -p 5432:5432 -d postgres
 
+    - name: Wait for PostgreSQL to be healthy
+      run: |
+        until docker exec postgres pg_isready -U postgres; do
+          echo "Waiting for postgres to be healthy...";
+          sleep 5;
+        done
+
     - name: Run Spring Boot backend container
       run: docker run -d --name my-springboot-app --link postgres:db -e SPRING_PROFILES_ACTIVE=dev -e SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/postgres -e SPRING_DATASOURCE_USERNAME=postgres -e SPRING_DATASOURCE_PASSWORD=mypassword -p 8080:8080 jeffreyamc/lab_e2e_20241_05_springboot:v4
-    
-    - name: Check Docker containers
-      run: docker ps
 
     - name: Run test_connection.sh
       run: |
         chmod +x test_connection.sh
         ./test_connection.sh
+
+    - name: Check Docker containers
+      run: docker ps
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '18'
+
+    - name: Install Node.js dependencies
+      run: npm install
+      working-directory: ./frontend
+
+    - name: Build React project
+      run: npm run build
+      working-directory: ./frontend
+
+    # - name: Run unit tests for React project
+    #   run: npm test
+    #   working-directory: ./frontend
