--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -45,7 +45,7 @@ jobs:
       working-directory: ./frontend
 
     - name: Start React server
-      run: npm run dev
+      run: npm run dev &
       working-directory: ./frontend
 
     - name: Wait for React server to be ready
