--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -60,7 +60,7 @@ jobs:
 
     - name: Run Cypress tests
       run: |
-        npx cypress run --config-file ./frontend/cypress.config.js --browser chrome --record false
+        npx cypress run --config-file ./cypress.config.js --browser chrome --record false
       working-directory: ./frontend
       env:
         CYPRESS_BASE_URL: http://localhost:3000
