Test Postgres x Cypress

--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -11,7 +11,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Start PostgreSQL container
-      run: docker run --name postgres -e POSTGRES_DB=postgres -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=mypassword -p 5432:5432 -d postgres
+      run: docker run --name postgres -p 5432:5432 -d jeffreyamc/lab_e2e_20241_05_postgres:v1
 
     - name: Wait for PostgreSQL to be healthy
       run: |
