Integration Cypress x Autograder

--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -40,10 +40,6 @@ jobs:
       run: npm install
       working-directory: ./frontend
 
-    - name: Build React project
-      run: npm run build
-      working-directory: ./frontend
-
     - name: Start React server
       run: npm run dev &
       working-directory: ./frontend
@@ -55,12 +51,17 @@ jobs:
           sleep 5;
         done
 
-    - name: Verify lockfile exists
-      run: ls -la ./frontend/package-lock.json
-
     - name: Run Cypress tests
+      id: run-cypress-tests
       run: |
         npx cypress run --config-file ./cypress.config.js --browser chrome --record false
       working-directory: ./frontend
       env:
         CYPRESS_BASE_URL: http://localhost:3000
+
+    - name: Autograding Reporter
+      uses: education/autograding-grading-reporter@v1
+      with:
+        runners: cypress
+      env:
+        CYPRESS_RESULTS: ${{ steps.run-cypress-tests.outputs.result }}
