--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.profiles.active=dev
 #server.port=8081
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=123
+spring.datasource.url=jdbc:postgresql://${PG_HOST}:${PG_PORT}/${POSTGRES_DB}
+spring.datasource.username=${PGUSER}
+spring.datasource.password=${PGPASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 logging.level.org.springframework.security.web=DEBUG
 
-jwt.secret=myjwtsecret
+jwt.secret=${JWTSECRET}
