--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,5 +7,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 logging.level.org.springframework.security.web=DEBUG
-
+db.backup.path=backend/db/db_backup_springboot.sql
 jwt.secret=${JWTSECRET}
+
