New Postgres & Springboot containers

--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -1,4 +1,5 @@
 spring.profiles.active=test
+db.backup.path=/backend/db/db_backup_springboot.sql
 jwt.secret=secret
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
