--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -26,10 +26,10 @@ jobs:
     - name: Check Docker containers
       run: docker ps
 
-    - name: Run test_connection.sh
-      run: |
-        chmod +x test_connection.sh
-        ./test_connection.sh
+    # - name: Run test_connection.sh
+    #   run: |
+    #     chmod +x test_connection.sh
+    #     ./test_connection.sh
 
     - name: Set up Node.js
       uses: actions/setup-node@v2
