--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -21,15 +21,15 @@ jobs:
         done
 
     - name: Run Spring Boot backend container
-      run: docker run -d --name my-springboot-app --link postgres:db -e SPRING_PROFILES_ACTIVE=dev -e SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/postgres -e SPRING_DATASOURCE_USERNAME=postgres -e SPRING_DATASOURCE_PASSWORD=mypassword -p 8080:8080 jeffreyamc/lab_e2e_20241_05_springboot:v5
+      run: docker run -d --name my-springboot-app --link postgres:db -e SPRING_PROFILES_ACTIVE=dev -e SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/postgres -e SPRING_DATASOURCE_USERNAME=postgres -e SPRING_DATASOURCE_PASSWORD=mypassword -p 8080:8080 jeffreyamc/lab_e2e_20241_05_springboot:v6
 
     - name: Check Docker containers
       run: docker ps
 
-    # - name: Run test_connection.sh
-    #   run: |
-    #     chmod +x test_connection.sh
-    #     ./test_connection.sh
+    - name: Run test_connection.sh
+      run: |
+        chmod +x test_connection.sh
+        ./test_connection.sh
 
     - name: Set up Node.js
       uses: actions/setup-node@v2
