--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 spring.profiles.active=dev
-db.backup.path=/backend/db/db_backup_springboot.sql
 #server.port=8081
 spring.datasource.url=jdbc:postgresql://${PG_HOST}:${PG_PORT}/${POSTGRES_DB}
 spring.datasource.username=${PGUSER}
@@ -8,5 +7,18 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 logging.level.org.springframework.security.web=DEBUG
+db.backup.path=/backend/db/db_backup_springboot.sql
 jwt.secret=${JWTSECRET}
 
+
+#spring.profiles.active=dev
+##server.port=8081
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.username=postgres
+#spring.datasource.password=mypassword
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+#logging.level.org.springframework.security.web=DEBUG
+#
+#jwt.secret=myjwtsecret
